<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">E-Nurse</string>
    <string name="action_settings">Settings</string>

    <string-array name="foodNames">
        <item>Red meat</item>
        <item>Poultry</item>
        <item>Legumes</item>
        <item>Pasta</item>
    </string-array>

    <string-array name="workoutNames">
        <item>Running</item>
        <item>Gym</item>
        <item>Sports</item>
    </string-array>

    <string-array name="drugNames">
        <item>Depon</item>
        <item>Panadol</item>
        <item>Xanax</item>
        <item>Vicodin</item>
    </string-array>

    <string-array name="actions">
        <item>History</item>
        <item>Data</item>
        <item>E-Nurse</item>
        <item>Export</item>
        <item>Exit</item>
    </string-array>

    <string name="close_drawer">Closed</string>
    <string name="open_drawer">Opened</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="getDrugDescription">Time to take your drugs</string>
    <string name="time_to_workout">Time to workout</string>
    <string name="reminder">Reminder</string>
    <string name="invalidEntry_Numeric">Please insert a correct number</string>
    <string name="successfulEntry">Entry successful</string>
    <string name="morning">Morning</string>
    <string name="midday">Midday</string>
    <string name="evening">Evening</string>
    <string name="categories">Categories</string>
    <string name="time_period">Time of day</string>
    <string name="diet">Diet</string>
    <string name="workout">Workout</string>
    <string name="drugs">Drugs</string>
    <string name="profile">Profile</string>
    <string name="history">History</string>
    <string name="drug_history">Drug history</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="dataUpdated">Data update successful</string>
    <string name="no_network">No networking enabled</string>
    <string name="wrong_credentials">Incorrect username/password</string>
    <string name="data_sync_success">Data successfully synced</string>
    <string name="already_synced">Data was already synced</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="error_insertUsernamePassword">Please insert a valid username/password</string>
    <string name="servings">Servings</string>
    <string name="minutes">Minutes</string>
    <string name="date_time_separator">at</string>
    <string name="drug">Φάρμακο:</string>
    <string name="quantity">Δοσολογία (σε ml)</string>
    <string name="tvCause">Αιτία Συν/σης:</string>
    <string name="tvPeriod">Περίοδος Κατανάλωσης</string>
    <string name="Morning">Πρωί</string>
    <string name="Night">Βράδυ</string>
    <string name="DateTime">Ημερομηνία:</string>
    <string name="login">Είσοδος</string>
    <string name="name">Όνομα λογαριασμού:</string>
    <string name="password">Κωδικός:</string>
    <string name="createAccount">Δημιουργία Λογαριασμού</string>
    <string name="loginAccount">Σύνδεση</string>
    <string name="accountDetails">Στοιχεία λογαριασμού</string>
    <string name="personalDetails">Προσωπικά στοιχεία</string>
    <string name="namAccount">Όνομα :</string>
    <string name="surname">Επίθετο :</string>
    <string name="age">Ηλικία :</string>
    <string name="nameAccount">Όνομα λογαριασμού:</string>
    <string name="pass">Κωδικός :</string>
    <string name="timeOfWorkout">Χρόνος Άθλησης (σε λεπτά)</string>
    <string name="periodOfworkout">Περίοδος \'Αθλησης</string>
    <string name="noon">Μεσημέρι</string>
    <string name="morning2">Πρωί</string>
    <string name="night2">Βράδυ</string>
    <string name="datetime">Ημερομηνία:</string>
    <string name="periodoFWORKOUT">Περίοδος Άθλησης</string>
    <string name="category">Κατηγορία:</string>
    <string name="key_animations">Special Effects</string>
    <string name="key_delete_exc">Delete Exercise Data</string>
    <string name="key_delete_food">Delete Diet Data</string>
    <string name="key_export">Syncronize Data</string>
    <string name="key_about">About Application</string>
    <string name="key_rate">Rate this app</string>
    <string name="key_about_title">About</string>
    <string name="data">Data</string>
    <string name="doctors_info">Στοιχεία Γιατρού</string>
    <string name="illness_history">Ιστορικό παθήσεων</string>
    <string name="weight">Βάρος (kg)</string>
    <string name="height">Ύψος (cm)</string>
    <string name="body_info">Σωματικά στοιχεία</string>
    <string name="gender">Φύλο</string>
    <string name="checkBox_routine_reminder">Υπενθύμιση Άσκησης</string>
    <string name="ok">Ok</string>
    <string name="key_log_out">Log out user</string>


</resources>
