<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="Γενικα">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="key_animations"
            android:title="Ειδικά εφε" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/data">

        <Preference
            android:key="key_delete_exc"
            android:title="@string/key_delete_exc" />

        <Preference
            android:key="key_delete_food"
            android:title="@string/key_delete_food" />
            <!--android:title="Διαγραφη δεδομενων Διατροφης" />-->

        <Preference
            android:key="key_export"
            android:title="@string/key_export" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="key_about_title"
        android:title="Σχετικα">

        <Preference
            android:key="key_about"
            android:title="Σχετικα με την εφαρμογη" />

        <Preference
            android:key="key_rate"
            android:title="Αξιολογηση" />

    </PreferenceCategory>


</PreferenceScreen>