<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="60dp"
            android:weightSum="1">

            <LinearLayout
                android:id="@+id/llAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/tvlogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:gravity="center"
                    android:text="@string/accountDetails"
                    style="@style/InfoTextStyle"
                    android:textSize="30sp"/>

                <View
                    android:id="@+id/view5"
                    android:layout_width="wrap_content"
                    android:layout_height="2dp"
                    android:layout_marginBottom="3dp"
                    android:background="@drawable/line_separator" />

                <LinearLayout
                    android:id="@+id/llUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:weightSum="1">

                    <me.grantland.widget.AutofitTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:padding="16dp"
                        android:text="@string/nameAccount"
                        style="@style/InfoTextStyle"/>

                    <EditText
                        android:id="@+id/etUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:ems="10"
                        android:inputType="textPersonName"
                        style="@style/EditTextStyle" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:weightSum="1">

                    <me.grantland.widget.AutofitTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:padding="16dp"
                        android:text="@string/pass"
                        style="@style/InfoTextStyle" />

                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:ems="10"
                        android:inputType="textPassword"
                        style="@style/InfoTextStyle" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:text="@string/personalDetails"
                style="@style/InfoTextStyle"
                android:textSize="30sp"/>

            <View
                android:id="@+id/view1"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginBottom="3dp"
                android:background="@drawable/line_separator" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:focusable="true"
                android:weightSum="1">

                <me.grantland.widget.AutofitTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:padding="16dp"
                    android:text="@string/namAccount"
                    style="@style/InfoTextStyle"/>

                <EditText
                    android:id="@+id/onoma"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:ems="10"
                    android:inputType="textPersonName"
                    style="@style/EditTextStyle" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:weightSum="1">

                <me.grantland.widget.AutofitTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:padding="16dp"
                    android:text="@string/surname"
                    style="@style/InfoTextStyle" />

                <EditText
                    android:id="@+id/etsurname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:ems="10"
                    style="@style/EditTextStyle" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:weightSum="1">

                <me.grantland.widget.AutofitTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:padding="16dp"
                    android:text="@string/age"
                    style="@style/InfoTextStyle" />

                <EditText
                    android:id="@+id/ilikia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:ems="10"
                    android:inputType="number"
                    style="@style/EditTextStyle"  />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:weightSum="1">

                <me.grantland.widget.AutofitTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:padding="10dp"
                    android:text="@string/gender"
                    style="@style/InfoTextStyle"/>


                <RadioGroup
                    android:id="@+id/fylo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text"
                    android:layout_weight="0.5"
                    android:checkedButton="@+id/rd_male">

                    <RadioButton
                        android:id="@+id/rb_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male"
                        style="@style/InfoTextStyle" />

                    <RadioButton
                        android:id="@+id/rb_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female"
                        style="@style/InfoTextStyle" />

                </RadioGroup>


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/body_info"
                style="@style/InfoTextStyle"
                android:textSize="30sp"/>

            <View
                android:id="@+id/view2"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginBottom="3dp"
                android:background="@drawable/line_separator" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:weightSum="1">

                <me.grantland.widget.AutofitTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:padding="10dp"
                    android:text="@string/height"
                    style="@style/InfoTextStyle"  />

                <EditText
                    android:id="@+id/ypsos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:ems="10"
                    android:inputType="number"
                    style="@style/EditTextStyle"  />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:weightSum="1">

                <me.grantland.widget.AutofitTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:padding="10dp"
                    android:text="@string/weight"
                    style="@style/InfoTextStyle" />

                <EditText
                    android:id="@+id/baros"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:ems="10"
                    android:inputType="number"
                    style="@style/EditTextStyle" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_weight="0.2"
                    android:gravity="center"
                    android:text="@string/illness_history"
                    style="@style/InfoTextStyle" />


            </LinearLayout>


            <View
                android:id="@+id/view3"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginBottom="3dp"
                android:background="@drawable/line_separator" />

            <ImageButton
                android:id="@+id/ibAddHistory"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="bottom"
                android:layout_weight="0.8"
                android:src="@drawable/ic_plus"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"/>


            <LinearLayout
                android:id="@+id/llDiseases"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/doctors_info"
                style="@style/InfoTextStyle"
                android:textSize="30sp"/>

            <View
                android:id="@+id/view4"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginBottom="3dp"
                android:background="@drawable/line_separator" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="1">


                <me.grantland.widget.AutofitTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:padding="10dp"
                    android:text="@string/name"
                    style="@style/InfoTextStyle"/>


                <Spinner
                    android:id="@+id/spDoctors"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkBoxRoutine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/checkBox_routine_reminder"
                    style="@style/InfoTextStyle"/>

                <TimePicker
                    android:id="@+id/timePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0.83"
                    android:visibility="gone"/>

            </LinearLayout>

            </LinearLayout>


    </ScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btOk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:theme="@style/MyButton"
            android:text="@string/ok" />

    </LinearLayout>


</RelativeLayout>
