<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llCategory"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:weightSum="1">


                <me.grantland.widget.AutofitTextView
                    android:id="@+id/tvCat"
                    style="@style/InfoTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:padding="10dp"
                    android:text="@string/category" />


                <Spinner
                    android:id="@+id/spChooseEx"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4" />


            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/line_separator" />


            <LinearLayout
                android:id="@+id/llQuant"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:weightSum="1">


                <me.grantland.widget.AutofitTextView
                    android:id="@+id/tvQuantity"
                    style="@style/InfoTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:lines="2"
                    android:padding="10dp"
                    android:text="@string/timeOfWorkout" />


                <EditText
                    android:id="@+id/etDuration"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.4"
                    android:inputType="number" />


            </LinearLayout>


            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/line_separator" />


            <me.grantland.widget.AutofitTextView
                android:id="@+id/tvPeriod"
                style="@style/InfoTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/periodoFWORKOUT" />

            <LinearLayout
                android:id="@+id/lltod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <RadioGroup
                    android:id="@+id/rdtod"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"

                    >

                    <RadioButton
                        android:id="@+id/rbMorn"
                        style="@style/InfoTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:text="@string/morning2" />

                    <RadioButton
                        android:id="@+id/rbNoon"
                        style="@style/InfoTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:text="@string/noon" />

                    <RadioButton
                        android:id="@+id/rbNight"
                        style="@style/InfoTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:text="@string/night2" />
                </RadioGroup>

            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/line_separator" />

            <LinearLayout
                android:id="@+id/lldate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <me.grantland.widget.AutofitTextView
                    android:id="@+id/tvDate"
                    style="@style/InfoTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.3"
                    android:padding="10dp"
                    android:text="@string/datetime" />

                <ImageButton
                    android:id="@+id/imbtDate"
                    style="@style/ImageButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="0.7" />
            </LinearLayout>

        </LinearLayout>


    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btOk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/ok"
            android:theme="@style/OkButtonStyle" />

    </LinearLayout>

</RelativeLayout>